scripts/stack.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Zuhlke Uk News Cloud Formation Template
Parameters:
  KeyName:
    Description: EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: london-kp
  InstanceType:
    Description: Jekyll EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
    - t2.micro
  JekyllAMI:
    Description: EC2 instance AMI provsioned with jekyll
    Type: String
    Default: ami-26233742
    AllowedValues:
    - ami-26233742
Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Instance security group
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '8080'
        ToPort: '8080'
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '8080'
        ToPort: '8080'
        CidrIp: 0.0.0.0/0
      VpcId: vpc-fdcd1194
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroupIds:
      - Ref: InstanceSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId:
        Ref: JekyllAMI
      UserData: !Base64 |
        #!/bin/bash -xe
        gem uninstall bundler bundle rubygems-update --all -x && gem update --system 2.6.1 && gem install bundler && gem uninstall rubygems-update --all -x && gem update --system 2.6.4
        # Set app's DNS name on hosts file
        privateIp=$(curl -s http://169.254.169.254/latest/meta-data/local-ipv4)
        sudo bash -c "echo ${privateIp} news.zuhlke.com >> /etc/hosts"
        # Setup the application\n
        git clone https://github.com/raulra08/aws-cloud-formation.git /opt/aws-cloud-formation
        sudo chown -R ec2-user: /opt/aws-cloud-formation
